--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 
 .data {
     font-family: Poppins;
-    color: #fff;
+    color: springgreen;
     font-size: 40px;
     letter-spacing: 12px;
     font-weight: 600;
@@ -27,19 +27,6 @@ p {
     font-size: 15px;
     font-family: courier;
 
-}
-
-div {
-    color: black;
-    background-color: lightgrey;
-    margin: 5px;
-    padding: 5px;
-    font-size: 14px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-h3 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 br {
